переверстан блок tech_spec на grid

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -123,94 +123,89 @@
         <div class="container__content">
             <div class="tech_spec__wrapper">
                 <div class="tech_spec__description">
-                    <div class="tech_spec__info-wrapper">
+                    <div class="tech_spec__description-grid_wrapper">
                         <div class="tech_spec__titles">
                             <div class="text_spec__texts">
                                 <p class="tech_spec__title">Дорожный патруль</p>
                                 <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
                             </div>
-                            <a class="tech_spec__btn-copied">
+                        </div>
+                        <div class="tech_spec__mission">
+                            <p class="tech_spec__text">Задача:</p>
+                            <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
+                        </div>
+                        <div class="tech_spec__outfit">
+                            <p class="tech_spec__text">Экипировка:</p>
+                            <ul class="tech_spec__outfit-list">
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_2.svg" alt="Аптечка">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Аптечка</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_3.svg" alt="Инструменты">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Инструменты</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_4.svg" alt="Трос">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Трос</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Пусковое устройство</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Бланки европротокола</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Cкладная лестница</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_9.svg" alt="Домкрат">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Домкрат</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_11.svg" alt="Гайковерт">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Гайковерт</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tech_spec__button">
+                            <a class="tech_spec__btn">
                                 <span>Скрыть</span>
-                                <img src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
                             </a>
                         </div>
-                        <div class="tech_spec__visible">
-                            <div class="tech_spec__mission">
-                                <p class="tech_spec__text">Задача:</p>
-                                <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
-                            </div>
-                            <div class="tech_spec__outfit">
-                                <p class="tech_spec__text">Экипировка:</p>
-                                <ul class="tech_spec__outfit-list">
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_2.svg" alt="Аптечка">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Аптечка</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_3.svg" alt="Инструменты">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Инструменты</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_4.svg" alt="Трос">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Трос</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Пусковое устройство</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Бланки европротокола</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Cкладная лестница</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_9.svg" alt="Домкрат">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Домкрат</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Дорожные конусы</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="../img/layout/outfit/outfit_11.svg" alt="Гайковерт">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Гайковерт</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
-                    <a class="tech_spec__btn">
-<!--                        <span>Подробнее</span>-->
-                        <span>Скрыть</span>
-                        <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
-                    </a>
                 </div>
             </div>
         </div>
@@ -247,16 +242,16 @@
                                 <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
-                            </a>
-                        </div>
 <!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/solaris_two.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">-->
+<!--                            <a class="gallery_item_link" href="../pages/solaris.html">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">-->
 <!--                            </a>-->
 <!--                        </div>-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/solaris_two.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">
+                            </a>
+                        </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
