--- a/src/index.html
+++ b/src/index.html
@@ -630,20 +630,20 @@
                     </div>
                     <div class="water_patrol_history">
                         <div class="water_patrol_history_top">
-                            <p class="water_patrol_history-title">Водный патруль ЦОДД начал свою работу весной 2022 года.</p>
+                            <p class="water_patrol_history-title">Водный патруль ЦОДД начал свою работу весной 2022&nbsp;года.</p>
                             <p class="water_patrol_history-text">Зеленый катер ежедневно патрулирует акваторию города.</p>
                         </div>
-                        <p class="water_patrol_history-text">В его задачи входит фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории, оперативное взаимодействие с&nbsp;контрольно-надзорными и&nbsp;правоохранительными органами, проведение профилактических бесед о&nbsp;правилах поведения на&nbsp;воде.</p>
+                        <p class="water_patrol_history-text">В&nbsp;его задачи входит фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории, оперативное взаимодействие с&nbsp;контрольно-надзорными и&nbsp;правоохранительными органами, проведение профилактических бесед о&nbsp;правилах поведения на&nbsp;воде.</p>
                     </div>
                     <div class="water_patrol_text_1">
-                        <p class="water_patrol-text">У каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                     </div>
                     <div class="water_patrol_text_2">
-                        <p class="water_patrol-text">За прошлый летний сезон Водный патруль прошел 18 тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100 нарушений.</p>
+                        <p class="water_patrol-text">За&nbsp;прошлый летний сезон Водный патруль прошел 18&nbsp;тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100&nbsp;нарушений.</p>
                     </div>
                     <div class="water_patrol_text_mobile">
-                        <p class="water_patrol-text">У каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
-                        <p class="water_patrol-text">За прошлый летний сезон Водный патруль прошел 18 тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100 нарушений.</p>
+                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                        <p class="water_patrol-text">За&nbsp;прошлый летний сезон Водный патруль прошел 18&nbsp;тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100&nbsp;нарушений.</p>
                     </div>
                 </div>
             </div>
