--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -84,7 +84,6 @@
             });
         }, 1500);
     </script>
-
 </head>
 <body>
 
@@ -117,8 +116,8 @@
             <div class="header__info">
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
-                    <p class="header__info-text">Дорожный патруль</p>
-                    <p class="header__info-text">30 автомобилей</p>
+                    <p class="header__info-text">Man</p>
+                    <p class="header__info-text">1 транспортное средство</p>
                 </div>
             </div>
         </div>
@@ -133,76 +132,46 @@
                     <div class="tech_spec__description-grid_wrapper">
                         <div class="tech_spec__titles">
                             <div class="text_spec__texts">
-                                <p class="tech_spec__title">Дорожный патруль</p>
-                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                                <p class="tech_spec__title">Мобильный ситуационный центр</p>
+                                <p class="tech_spec__subtitle">Мобильный аналог Ситуационного центра ЦОДД</p>
                             </div>
                         </div>
                         <div class="tech_spec__mission">
                             <p class="tech_spec__text">Задача:</p>
-                            <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
+                            <p class="tech_spec__text-descr">Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации</p>
                         </div>
                         <div class="tech_spec__outfit">
                             <p class="tech_spec__text">Экипировка:</p>
                             <ul class="tech_spec__outfit-list">
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
+                                        <img src="../img/layout/outfit/bus/outfit_1.svg" alt="Телескопическая камера">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                    <span class="tech_spec__outfit-text">Телескопическая камера</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_2.svg" alt="Аптечка">
+                                        <img src="../img/layout/outfit/bus/outfit_2.svg" alt="Тепловизор">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Аптечка</span>
+                                    <span class="tech_spec__outfit-text">Тепловизор</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_3.svg" alt="Инструменты">
+                                        <img src="../img/layout/outfit/bus/outfit_3.svg" alt="Камеры телеобзора">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Инструменты</span>
+                                    <span class="tech_spec__outfit-text">Камеры телеобзора</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_4.svg" alt="Трос">
+                                        <img src="../img/layout/outfit/bus/outfit_4.svg" alt="Конференц-зона">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Трос</span>
+                                    <span class="tech_spec__outfit-text">Конференц-зона</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
+                                        <img src="../img/layout/outfit/bus/outfit_5.svg" alt="Телекоммуникационное оборудование">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Пусковое устройство</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Бланки европротокола</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Cкладная лестница</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_9.svg" alt="Домкрат">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Домкрат</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Дорожные конусы</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_11.svg" alt="Гайковерт">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Гайковерт</span>
+                                    <span class="tech_spec__outfit-text">Телекоммуникационное оборудование</span>
                                 </li>
                             </ul>
                         </div>
@@ -510,54 +479,54 @@
 </a-scene>
 
 <!--<script src="../js/loader.js"></script>-->
-<script>
-    const LOADING_TIME = 20000;
-    const PERCENT_STEP = 5;
-    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);
-    let percent = 0;
-    let preloader = document.querySelector(".progress-bar");
-    const percentEl = document.getElementById("progress-label");
-    const barEl = document.getElementById("progress-bar");
-    let progressText = document.getElementById("progress_text");
+<!--<script>-->
+<!--    const LOADING_TIME = 20000;-->
+<!--    const PERCENT_STEP = 5;-->
+<!--    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);-->
+<!--    let percent = 0;-->
+<!--    let preloader = document.querySelector(".progress-bar");-->
+<!--    const percentEl = document.getElementById("progress-label");-->
+<!--    const barEl = document.getElementById("progress-bar");-->
+<!--    let progressText = document.getElementById("progress_text");-->
 
-    function countLoad() {
-        barEl.style.width = "0%";
-        percentEl.textContent = `0%`;
-        let countInterval = setInterval(function () {
-            percent += PERCENT_STEP;
-            percentEl.textContent = `${percent}%`;
-            barEl.style.width = `${percent}%`;
-            if (percent >= 20 && percent < 45) {
-                progressText.textContent = 'Экипируемся...';
-            } else if (percent >= 45 && percent < 65) {
-                progressText.textContent = 'Проводим ТО...';
-            }else if (percent >= 65 && percent < 85) {
-                progressText.textContent = 'Моем машину...';
-            } else if (percent >= 85) {
-                progressText.textContent = 'Мы готовы!';
-            }
-            if (percent === 100) {
-                clearInterval(countInterval);
-                setTimeout(function () {
-                    fadeOutnojquery(preloader);
-                }, 100);
-            }
-        }, COUNT_LOAD_TIME);
-    }
-    function fadeOutnojquery(el) {
-        el.style.opacity = 1;
-        let interhellopreloader = setInterval(function () {
-            el.style.opacity = el.style.opacity - 0.05;
+<!--    function countLoad() {-->
+<!--        barEl.style.width = "0%";-->
+<!--        percentEl.textContent = `0%`;-->
+<!--        let countInterval = setInterval(function () {-->
+<!--            percent += PERCENT_STEP;-->
+<!--            percentEl.textContent = `${percent}%`;-->
+<!--            barEl.style.width = `${percent}%`;-->
+<!--            if (percent >= 20 && percent < 45) {-->
+<!--                progressText.textContent = 'Экипируемся...';-->
+<!--            } else if (percent >= 45 && percent < 65) {-->
+<!--                progressText.textContent = 'Проводим ТО...';-->
+<!--            }else if (percent >= 65 && percent < 85) {-->
+<!--                progressText.textContent = 'Моем машину...';-->
+<!--            } else if (percent >= 85) {-->
+<!--                progressText.textContent = 'Мы готовы!';-->
+<!--            }-->
+<!--            if (percent === 100) {-->
+<!--                clearInterval(countInterval);-->
+<!--                setTimeout(function () {-->
+<!--                    fadeOutnojquery(preloader);-->
+<!--                }, 100);-->
+<!--            }-->
+<!--        }, COUNT_LOAD_TIME);-->
+<!--    }-->
+<!--    function fadeOutnojquery(el) {-->
+<!--        el.style.opacity = 1;-->
+<!--        let interhellopreloader = setInterval(function () {-->
+<!--            el.style.opacity = el.style.opacity - 0.05;-->
 
-            if (el.style.opacity <= 0.05) {
-                clearInterval(interhellopreloader);
-                preloader.style.display = "none";
-            }
-        }, 16);
-    }
+<!--            if (el.style.opacity <= 0.05) {-->
+<!--                clearInterval(interhellopreloader);-->
+<!--                preloader.style.display = "none";-->
+<!--            }-->
+<!--        }, 16);-->
+<!--    }-->
 
-    countLoad();
-</script>
+<!--    countLoad();-->
+<!--</script>-->
 <script>
     setTimeout(() => {
         let currentInfoPanel = null;
