--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -137,13 +137,13 @@
                     <div class="tech_spec__description-grid_wrapper">
                         <div class="tech_spec__titles">
                             <div class="text_spec__texts">
-                                <p class="tech_spec__title">Дорожный патруль</p>
-                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                                <p class="tech_spec__title">Служба помощи</p>
+                                <p class="tech_spec__subtitle">Помощь водителям на&nbsp;базе мобильных комплексов фотовидеофиксации</p>
                             </div>
                         </div>
                         <div class="tech_spec__mission">
                             <p class="tech_spec__text">Задача:</p>
-                            <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
+                            <p class="tech_spec__text-descr">Помощь тем, кто столкнулся с&nbsp;трудностями на&nbsp;дороге</p>
                         </div>
                         <div class="tech_spec__outfit">
                             <p class="tech_spec__text">Экипировка:</p>
@@ -201,6 +201,12 @@
                                         <img src="../img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
                                     </div>
                                     <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/outfit_11.svg" alt="Гайковерт">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Гайковерт</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
@@ -333,54 +339,54 @@
 </a-scene>
 
 <!--<script src="../js/loader.js"></script>-->
-<script>
-    const LOADING_TIME = 20000;
-    const PERCENT_STEP = 5;
-    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);
-    let percent = 0;
-    let preloader = document.querySelector(".progress-bar");
-    const percentEl = document.getElementById("progress-label");
-    const barEl = document.getElementById("progress-bar");
-    let progressText = document.getElementById("progress_text");
+<!--<script>-->
+<!--    const LOADING_TIME = 20000;-->
+<!--    const PERCENT_STEP = 5;-->
+<!--    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);-->
+<!--    let percent = 0;-->
+<!--    let preloader = document.querySelector(".progress-bar");-->
+<!--    const percentEl = document.getElementById("progress-label");-->
+<!--    const barEl = document.getElementById("progress-bar");-->
+<!--    let progressText = document.getElementById("progress_text");-->
 
-    function countLoad() {
-        barEl.style.width = "0%";
-        percentEl.textContent = `0%`;
-        let countInterval = setInterval(function () {
-            percent += PERCENT_STEP;
-            percentEl.textContent = `${percent}%`;
-            barEl.style.width = `${percent}%`;
-            if (percent >= 20 && percent < 45) {
-                progressText.textContent = 'Экипируемся...';
-            } else if (percent >= 45 && percent < 65) {
-                progressText.textContent = 'Проводим ТО...';
-            }else if (percent >= 65 && percent < 85) {
-                progressText.textContent = 'Моем машину...';
-            } else if (percent >= 85) {
-                progressText.textContent = 'Мы готовы!';
-            }
-            if (percent === 100) {
-                clearInterval(countInterval);
-                setTimeout(function () {
-                    fadeOutnojquery(preloader);
-                }, 100);
-            }
-        }, COUNT_LOAD_TIME);
-    }
-    function fadeOutnojquery(el) {
-        el.style.opacity = 1;
-        let interhellopreloader = setInterval(function () {
-            el.style.opacity = el.style.opacity - 0.05;
+<!--    function countLoad() {-->
+<!--        barEl.style.width = "0%";-->
+<!--        percentEl.textContent = `0%`;-->
+<!--        let countInterval = setInterval(function () {-->
+<!--            percent += PERCENT_STEP;-->
+<!--            percentEl.textContent = `${percent}%`;-->
+<!--            barEl.style.width = `${percent}%`;-->
+<!--            if (percent >= 20 && percent < 45) {-->
+<!--                progressText.textContent = 'Экипируемся...';-->
+<!--            } else if (percent >= 45 && percent < 65) {-->
+<!--                progressText.textContent = 'Проводим ТО...';-->
+<!--            }else if (percent >= 65 && percent < 85) {-->
+<!--                progressText.textContent = 'Моем машину...';-->
+<!--            } else if (percent >= 85) {-->
+<!--                progressText.textContent = 'Мы готовы!';-->
+<!--            }-->
+<!--            if (percent === 100) {-->
+<!--                clearInterval(countInterval);-->
+<!--                setTimeout(function () {-->
+<!--                    fadeOutnojquery(preloader);-->
+<!--                }, 100);-->
+<!--            }-->
+<!--        }, COUNT_LOAD_TIME);-->
+<!--    }-->
+<!--    function fadeOutnojquery(el) {-->
+<!--        el.style.opacity = 1;-->
+<!--        let interhellopreloader = setInterval(function () {-->
+<!--            el.style.opacity = el.style.opacity - 0.05;-->
 
-            if (el.style.opacity <= 0.05) {
-                clearInterval(interhellopreloader);
-                preloader.style.display = "none";
-            }
-        }, 16);
-    }
+<!--            if (el.style.opacity <= 0.05) {-->
+<!--                clearInterval(interhellopreloader);-->
+<!--                preloader.style.display = "none";-->
+<!--            }-->
+<!--        }, 16);-->
+<!--    }-->
 
-    countLoad();
-</script>
+<!--    countLoad();-->
+<!--</script>-->
 <script>
     setTimeout(() => {
         let currentInfoPanel = null;
